# code_execution_with_mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  generate_diagram.py  pyproject.toml
agent-api/: README.md
agent_api/: __init__.py  agent_manager.py  cache.py  config.py  converters.py  models.py  server.py  session_store.py
claude-spec/: docker-executor.md
claude_spec/: CLAUDE.md  CURRENT_STATUS.md  INDEX.md  README.md  gradio-ui-tool-calls-issue.md  implementation-plan-agent-api.md  implementation-plan-mcp-artifact-backend.md  implementation-status-agent-api-testing.md  implementation-status-agent-api.md  implementation-status-artifact-backend.md  implementation-status-docker-executor.md  implementation-status-gradio-ui.md  implementation-status-mcp-server.md  implementation-status-phase4-skills-integration.md  skills-system-implementation-status.md
docs/: running-servers.md
gradio_ui/: QUICKSTART.md  README.md  TECHNICAL_NOTES.md  app.py
mcp/: README.md  __init__.py  docker_client.py
mcp/docker/: Dockerfile  build.sh
mcp_server/: __init__.py  docker_client.py  server.py
mcp_server/docker/: DOCKER_IN_DOCKER.md  Dockerfile  test_build.md
mcp_server/skills/: README.md
mcp_server/tools/: artifact_validation.py  sympy_helpers.py
mcp_server/utils/: __init__.py  skill_utils.py  tool_utils.py
tests/: test_config_loading.py
tests/test_agent_api/: README.md  __init__.py  conftest.py  test_direct_agent.py  test_server.py
tests/test_gradio_ui/: README.md  test_chat.py  test_startup.sh
tests/test_mcp_server/: __init__.py  (+3 more)
(+1 files in other folders)
