[project]
name = "code-execution-with-mcp"
version = "0.1.0"
description = "Hackathon demonstration of Skills and Code Execution with MCP"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.121.3",
    "fastmcp>=2.13.1",
    "google-adk>=1.18.0",
    "gradio>=5.50.0",
    "httpx>=0.28.1",
    "litellm>=1.65.0",
    "mcp>=1.22.0",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "complexipy>=4.2.0",
    "ipython>=9.7.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["code-execution-with-mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
